# bafs-driver

./: .gitignore  CMakeLists.txt  Kbuild  Makefile  README.md  bafs_common.h  bafs_core.c  bafs_core_ioctl.h  bafs_ctrl.h  bafs_ctrl_ioctl.h  bafs_group.h  bafs_mem.h  bafs_pci.h  bafs_types.h  bafs_util.h  configure
lib/include/: bafs.h
lib/src/: bafs.c
module/: Kbuild  Makefile.in  bafs_core.c
module/bafs/: core.c  ctrl.c  data.c  group.c  mem.c
module/include/: bafs_common.h  bafs_core_ioctl.h  bafs_ctrl.h  bafs_ctrl_ioctl.h  bafs_ctrl_release.h  bafs_group.h  bafs_group_ioctl.h  bafs_mem.h  bafs_release.h  bafs_types.h  bafs_util.h
module/include/linux/: bafs.h  bafs_ctrl.h  bafs_ctrl_ioctl.h  bafs_group.h  bafs_mem.h  bafs_types.h
module/include/linux/bafs/: ctrl.h  group.h  mem.h  release.h  types.h  util.h
tests/: create_group.c  delete_group.c  dma_map_cpu_mem.c  dma_map_cuda_mem.c  dma_map_cuda_mem.cu  open_ctrl.c  pin_cpu_mem.c  register_mem.c
